<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="access"
            type="com.shelazh.myfriend2.ui.WelcomeActivity" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.WelcomeActivity">

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/next" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_150sdp"
            android:fontFamily="@font/handmade_farmhouse"
            android:gravity="center_horizontal|bottom"
            android:text="@string/lets"
            android:textColor="@color/md_theme_light_primary"
            android:textSize="@dimen/_40ssp"
            android:textStyle="bold"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/welcome_quote"
            android:textColor="@color/md_theme_light_primary"
            android:layout_marginBottom="@dimen/_25sdp"

            android:textSize="@dimen/_12ssp"
            app:layout_constraintBottom_toTopOf="@+id/btn_next"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cornerRadius="@dimen/_5sdp"
            android:layout_margin="@dimen/_5sdp"
            android:text="@string/welcome_button"
            android:textSize="@dimen/_13ssp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="VisualLintButtonSize" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>